# multithreading-polymorphism-actors-dispatcher-

./: Actor.cpp  Actor.h  AutoDecrease.cpp  AutoDecrease.h  AutoIncrease.cpp  AutoIncrease.h  CMakeLists.txt  Controller.cpp  Controller.h  CountWithValue.cpp  CountWithValue.h  DefaultCount.cpp  DefaultCount.h  Dispatcher.cpp  Dispatcher.h  View.cpp  View.h  Worker.cpp  Worker.h  main.cpp
Controller/: Controller.cpp  Controller.h
Model/headers/: Actor.h  AutoDecrease.h  AutoIncrease.h  CountWithValue.h  DefaultCount.h  Dispatcher.h  Worker.h
Model/srcs/: Actor.cpp  AutoDecrease.cpp  AutoIncrease.cpp  CountWithValue.cpp  DefaultCount.cpp  Dispatcher.cpp  Worker.cpp
View/: View.cpp  View.h
